@@ -2,5 +2,12 @@
 xsi:schemaLocation="http://www.blizzard.com/wow/ui/
 ..\FrameXML\UI.xsd">
 <Script file="Libs\LibStub\LibStub.lua"/>
+<Script file="Libs\LibDBIcon-1.0\LibDBIcon-1.0.lua"/>
+<Script file="Libs\LibDataBroker-1.1\LibDataBroker-1.1.lua"/>
 <Include file="Libs\CallbackHandler-1.0\CallbackHandler-1.0.xml"/>
+<Include file="Libs\AceConfig-3.0\AceConfig-3.0.xml"/>
+<Include file="Libs\AceDB-3.0\AceDB-3.0.xml"/>
+<Include file="Libs\AceLocale-3.0\AceLocale-3.0.xml"/>
+<Include file="Libs\AceConsole-3.0\AceConsole-3.0.xml"/>
+<Include file="Libs\AceAddon-3.0\AceAddon-3.0.xml"/>
 </Ui>
